tooling/nargo_cli/tests/snapshots/execution_failure/regression_9986/execute__tests__acir_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
warning: Unused expression result of type bool
  ┌─ src/main.nr:2:5
  │
2 │     [("", 0_u32)][2147483648].1 == 0;
  │     --------------------------------
  │

bug: Assertion is always false: Index out of bounds
  ┌─ src/main.nr:2:5
  │
2 │     [("", 0_u32)][2147483648].1 == 0;
  │     ------------------------- As a result, the compiled circuit is ensured to fail. Other assertions may also fail during execution
  │
  = Call stack:
    1: main
            at src/main.nr:2:5

error: Assertion failed: Index out of bounds
  ┌─ src/main.nr:2:5
  │
2 │     [("", 0_u32)][2147483648].1 == 0;
  │     -------------------------
  │
  = Call stack:
    1: main
            at src/main.nr:2:5

Failed assertion
