tooling/nargo_cli/tests/snapshots/execution_failure/regression_9986/execute__tests__brillig_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
warning: Unused expression result of type bool
  ┌─ src/main.nr:2:5
  │
2 │     [("", 0_u32)][2147483648].1 == 0;
  │     --------------------------------
  │

error: Assertion failed: Index out of bounds
  ┌─ src/main.nr:2:5
  │
2 │     [("", 0_u32)][2147483648].1 == 0;
  │     -------------------------
  │
  = Call stack:
    1. src/main.nr:2:5

Failed assertion
