tooling/nargo_cli/tests/snapshots/execution_failure/regression_9986/execute__tests__comptime_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
warning: Unused expression result of type bool
  ┌─ src/main.nr:2:5
  │
2 │     [("", 0_u32)][2147483648].1 == 0;
  │     --------------------------------
  │

error: 2147483648 is out of bounds for the array of length 1
  ┌─ src/main.nr:2:5
  │
2 │     [("", 0_u32)][2147483648].1 == 0;
  │     -------------------------
  │

Error interpreting main function
